--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "aos": "^3.0.0-beta.6",
     "bootstrap": "^5.0.0-beta2",
     "jquery": "^3.5.1",
     "parcel-bundler": "^1.12.4",
